--- a/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 1 (10.12)/Принимать текстовые запросы (название трека исполнитель).md
+++ b/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 1 (10.12)/Принимать текстовые запросы (название трека исполнитель).md
@@ -1,139 +1,243 @@
 ```python
 import requests
 from aiogram import Bot, Dispatcher, types
-from aiogram.utils import executor
+from aiogram.filters import Command
+from aiogram.types import Message
 import random
+import asyncio
 
 TOKEN = "8205786674:AAF0JYnQBU7F6-hXQ0eqjYoJZyxAFhlxKsA"
 
 bot = Bot(token=TOKEN)
-dp = Dispatcher(bot)
+dp = Dispatcher()
+
 
 # --- Функции поиска ---
 def search_music(query, limit=5):
     url = "https://itunes.apple.com/search"
-    params = {"term": query, "entity": "song", "limit": limit}
+    params = {
+        "term": query,
+        "entity": "song",
+        "limit": limit,
+        "country": "RU",  # Ищем в России
+        "lang": "ru_ru"
+    }
     return requests.get(url, params=params).json().get("results", [])
+
 
 def search_by_artist(artist, limit=5):
     url = "https://itunes.apple.com/search"
-    params = {"term": artist, "entity": "song", "attribute": "artistTerm", "limit": limit}
+    params = {
+        "term": artist,
+        "entity": "song",
+        "attribute": "artistTerm",
+        "limit": limit,
+        "country": "RU",
+        "lang": "ru_ru"
+    }
     return requests.get(url, params=params).json().get("results", [])
+
 
 def search_by_track(track, limit=5):
     url = "https://itunes.apple.com/search"
-    params = {"term": track, "entity": "song", "attribute": "songTerm", "limit": limit}
+    params = {
+        "term": track,
+        "entity": "song",
+        "attribute": "songTerm",
+        "limit": limit,
+        "country": "RU",
+        "lang": "ru_ru"
+    }
     return requests.get(url, params=params).json().get("results", [])
 
+
 def get_top_tracks(limit=5):
-    url = f"https://itunes.apple.com/us/rss/topsongs/limit={limit}/json"
-    results = requests.get(url).json().get("feed", {}).get("entry", [])
-    tracks = []
-    for t in results:
-        tracks.append({
-            "trackName": t["im:name"]["label"],
-            "artistName": t["im:artist"]["label"],
-            "previewUrl": t["link"][0]["attributes"]["href"]
-        })
-    return tracks
+    url = f"https://itunes.apple.com/ru/rss/topsongs/limit={limit}/json"
+    try:
+        results = requests.get(url).json().get("feed", {}).get("entry", [])
+        tracks = []
+        for t in results:
+            tracks.append({
+                "trackName": t["im:name"]["label"],
+                "artistName": t["im:artist"]["label"],
+                "previewUrl": t["link"][0]["attributes"]["href"]
+            })
+        return tracks
+    except Exception as e:
+        print(f"Error getting top tracks: {e}")
+        # Fallback to international top
+        url_us = f"https://itunes.apple.com/us/rss/topsongs/limit={limit}/json"
+        results = requests.get(url_us).json().get("feed", {}).get("entry", [])
+        tracks = []
+        for t in results:
+            tracks.append({
+                "trackName": t["im:name"]["label"],
+                "artistName": t["im:artist"]["label"],
+                "previewUrl": t["link"][0]["attributes"]["href"]
+            })
+        return tracks
+
 
 def get_random_tracks(limit=5):
-    results = search_music("a", limit=50)
+    # Ищем по русским буквам для разнообразия
+    search_terms = ["а", "и", "love", "pop", "rock", "д"]
+    term = random.choice(search_terms)
+    results = search_music(term, limit=50)
+
+    if len(results) < limit:
+        # Если результатов мало, добавляем еще
+        results += search_music(random.choice(["a", "the", "me"]), limit=30)
+
     return random.sample(results, min(limit, len(results)))
 
+
 # --- Команды бота ---
-@dp.message_handler(commands=['start'])
-async def cmd_start(message: types.Message):
+@dp.message(Command('start'))
+async def cmd_start(message: Message):
     await message.answer(
         "Привет! Я музыкальный бот 🎵\n\n"
         "Напиши название трека или исполнителя, и я найду музыку для тебя.\n"
+        "Я ищу как русские, так и международные песни!\n\n"
         "Используй /help чтобы узнать все команды."
     )
 
-@dp.message_handler(commands=['help'])
-async def cmd_help(message: types.Message):
+
+@dp.message(Command('help'))
+async def cmd_help(message: Message):
     await message.answer(
         "Вот что я умею:\n"
         "/help - показать эту справку\n"
         "/random - получить случайные треки\n"
         "/top - показать топ-песни\n"
-        "/settings - настройки бота (заглушка)\n"
+        "/settings - настройки бота\n"
         "/artist <имя> - поиск треков по исполнителю\n"
         "/track <название> - поиск конкретного трека\n\n"
         "Или просто напиши название трека или исполнителя."
     )
 
-@dp.message_handler(commands=['random'])
-async def cmd_random(message: types.Message):
+
+@dp.message(Command('random'))
+async def cmd_random(message: Message):
     tracks = get_random_tracks()
-    text = "🎲 Случайные треки:\n\n"
-    for t in tracks:
-        text += f"🎵 {t['trackName']}\n👤 {t['artistName']}\n{t['previewUrl']}\n\n"
-    await message.answer(text)
+    if not tracks:
+        await message.answer("Не удалось найти случайные треки ")
+        return
 
-@dp.message_handler(commands=['top'])
-async def cmd_top(message: types.Message):
-    tracks = get_top_tracks()
-    text = "🔥 Топ-песни:\n\n"
+    text = " Случайные треки:\n\n"
     for t in tracks:
-        text += f"🎵 {t['trackName']}\n👤 {t['artistName']}\n{t['previewUrl']}\n\n"
-    await message.answer(text)
+        text += f"🎵 {t.get('trackName', 'Неизвестно')}\n"
+        text += f"👤 {t.get('artistName', 'Неизвестно')}\n"
+        if 'previewUrl' in t:
+            text += f"🔗 {t['previewUrl']}\n"
+        text += "\n"
+    await message.answer(text[:4000])
 
-@dp.message_handler(commands=['settings'])
-async def cmd_settings(message: types.Message):
-    await message.answer("⚙️ Настройки бота пока недоступны, но скоро будут!")
+
+@dp.message(Command('top'))
+async def cmd_top(message: Message):
+    tracks = get_top_tracks(limit=10)
+    if not tracks:
+        await message.answer("Не удалось загрузить топ-песни ")
+        return
+
+    text = " Топ-песни:\n\n"
+    for i, t in enumerate(tracks, 1):
+        text += f"{i}. 🎵 {t.get('trackName', 'Неизвестно')}\n"
+        text += f"   👤 {t.get('artistName', 'Неизвестно')}\n"
+        if 'previewUrl' in t:
+            text += f"   🔗 {t['previewUrl']}\n"
+        text += "\n"
+    await message.answer(text[:4000])
+
+
+@dp.message(Command('settings'))
+async def cmd_settings(message: Message):
+    await message.answer(
+        "⚙️ Настройки бота:\n\n"
+        "• Страна поиска: Россия\n"
+        "• Количество результатов: 5-10\n"
+        "• Язык интерфейса: Русский\n\n"
+        "Бот ищет музыку в iTunes Store с приоритетом российского региона."
+    )
+
 
 # --- Поиск по исполнителю ---
-@dp.message_handler(commands=['artist'])
-async def cmd_artist(message: types.Message):
-    args = message.get_args()
-    if not args:
-        await message.answer("❌ Пожалуйста, укажи имя исполнителя после команды /artist")
-        return
-    tracks = search_by_artist(args)
-    if not tracks:
-        await message.answer("Ничего не найдено 😔")
+@dp.message(Command('artist'))
+async def cmd_artist(message: Message):
+    args = message.text.split(maxsplit=1)
+    if len(args) < 2:
+        await message.answer(" Пожалуйста, укажи имя исполнителя после команды /artist")
         return
 
-    text = f"🎤 Треки исполнителя {args}:\n\n"
-    for t in tracks:
-        text += f"🎵 {t['trackName']}\n👤 {t['artistName']}\n{t['previewUrl']}\n\n"
-    await message.answer(text)
+    tracks = search_by_artist(args[1], limit=10)
+    if not tracks:
+        await message.answer(f"Исполнитель '{args[1]}' не найден ")
+        return
+
+    text = f"🎤 Треки исполнителя {args[1]}:\n\n"
+    for i, t in enumerate(tracks[:10], 1):
+        text += f"{i}. 🎵 {t.get('trackName', 'Неизвестно')}\n"
+        if 'previewUrl' in t:
+            text += f"   🔗 {t['previewUrl']}\n"
+        text += "\n"
+    await message.answer(text[:4000])
+
 
 # --- Поиск конкретного трека ---
-@dp.message_handler(commands=['track'])
-async def cmd_track(message: types.Message):
-    args = message.get_args()
-    if not args:
+@dp.message(Command('track'))
+async def cmd_track(message: Message):
+    args = message.text.split(maxsplit=1)
+    if len(args) < 2:
         await message.answer("❌ Пожалуйста, укажи название трека после команды /track")
         return
-    tracks = search_by_track(args)
+
+    tracks = search_by_track(args[1], limit=10)
     if not tracks:
-        await message.answer("Ничего не найдено 😔")
+        await message.answer(f"Трек '{args[1]}' не найден ")
         return
 
-    text = f"🎵 Результаты поиска трека '{args}':\n\n"
-    for t in tracks:
-        text += f"🎵 {t['trackName']}\n👤 {t['artistName']}\n{t['previewUrl']}\n\n"
-    await message.answer(text)
+    text = f"🎵 Результаты поиска трека '{args[1]}':\n\n"
+    for i, t in enumerate(tracks[:10], 1):
+        text += f"{i}. 🎵 {t.get('trackName', 'Неизвестно')}\n"
+        text += f"   👤 {t.get('artistName', 'Неизвестно')}\n"
+        if 'previewUrl' in t:
+            text += f"   🔗 {t['previewUrl']}\n"
+        text += "\n"
+    await message.answer(text[:4000])
+
 
 # --- Любой текст (поиск по общему запросу) ---
-@dp.message_handler()
-async def music_search(message: types.Message):
-    tracks = search_music(message.text)
-    if not tracks:
-        await message.answer("Ничего не найдено 😔")
+@dp.message()
+async def music_search(message: Message):
+    query = message.text.strip()
+    if not query:
         return
 
-    text = "🎶 Результаты:\n\n"
-    for t in tracks:
-        text += f"🎵 {t['trackName']}\n👤 {t['artistName']}\n{t['previewUrl']}\n\n"
-    await message.answer(text)
+    tracks = search_music(query, limit=10)
+
+    if not tracks:
+        await message.answer(f"По запросу '{query}' ничего не найдено \nПопробуй другой запрос или используй /help")
+        return
+
+    text = f"🎶 Результаты по запросу '{query}':\n\n"
+    for i, t in enumerate(tracks[:10], 1):
+        text += f"{i}. 🎵 {t.get('trackName', 'Неизвестно')}\n"
+        text += f"   👤 {t.get('artistName', 'Неизвестно')}\n"
+        if 'previewUrl' in t:
+            text += f"   🔗 {t['previewUrl']}\n"
+        text += "\n"
+
+    await message.answer(text[:4000])
+
 
 # --- Запуск бота ---
-if __name__ == "__main__":
-    executor.start_polling(dp, skip_updates=True)
+async def main():
+    print("Бот запущен! Ищет музыку...")
+    await dp.start_polling(bot)
 
+
+if __name__ == "__main__":
+    asyncio.run(main())
 ```
 
 ### Подключаем библиотеки
@@ -159,9 +263,9 @@ Telegram по нему понимает, какой бот работает.
 `bot = Bot(token=TOKEN) dp = Dispatcher()`
 
 `bot` — отправляет сообщения
-    
+
 `dp` — принимает сообщения
-    
+
 ---
 
 ### Функция поиска
