--- a/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 1 (10.12)/Принимать текстовые запросы (название трека исполнитель).md
+++ b/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 1 (10.12)/Принимать текстовые запросы (название трека исполнитель).md
@@ -126,9 +126,9 @@ async def cmd_random(message: Message):
     text = " Случайные треки:\n\n"
     for t in tracks:
         text += f"🎵 {t.get('trackName', 'Неизвестно')}\n"
-        text += f"👤 {t.get('artistName', 'Неизвестно')}\n"
+        text += f" {t.get('artistName', 'Неизвестно')}\n"
         if 'previewUrl' in t:
-            text += f"🔗 {t['previewUrl']}\n"
+            text += f" {t['previewUrl']}\n"
         text += "\n"
     await message.answer(text[:4000])
 
@@ -153,7 +153,7 @@ async def cmd_top(message: Message):
 @dp.message(Command('settings'))
 async def cmd_settings(message: Message):
     await message.answer(
-        "⚙️ Настройки бота:\n\n"
+        " Настройки бота:\n\n"
         "• Страна поиска: Россия\n"
         "• Количество результатов: 5-10\n"
         "• Язык интерфейса: Русский\n\n"
@@ -174,11 +174,11 @@ async def cmd_artist(message: Message):
         await message.answer(f"Исполнитель '{args[1]}' не найден ")
         return
 
-    text = f"🎤 Треки исполнителя {args[1]}:\n\n"
+    text = f" Треки исполнителя {args[1]}:\n\n"
     for i, t in enumerate(tracks[:10], 1):
         text += f"{i}. 🎵 {t.get('trackName', 'Неизвестно')}\n"
         if 'previewUrl' in t:
-            text += f"   🔗 {t['previewUrl']}\n"
+            text += f"    {t['previewUrl']}\n"
         text += "\n"
     await message.answer(text[:4000])
 
@@ -188,7 +188,7 @@ async def cmd_artist(message: Message):
 async def cmd_track(message: Message):
     args = message.text.split(maxsplit=1)
     if len(args) < 2:
-        await message.answer("❌ Пожалуйста, укажи название трека после команды /track")
+        await message.answer(" Пожалуйста, укажи название трека после команды /track")
         return
 
     tracks = search_by_track(args[1], limit=10)
@@ -199,7 +199,7 @@ async def cmd_track(message: Message):
     text = f"🎵 Результаты поиска трека '{args[1]}':\n\n"
     for i, t in enumerate(tracks[:10], 1):
         text += f"{i}. 🎵 {t.get('trackName', 'Неизвестно')}\n"
-        text += f"   👤 {t.get('artistName', 'Неизвестно')}\n"
+        text += f"    {t.get('artistName', 'Неизвестно')}\n"
         if 'previewUrl' in t:
             text += f"   🔗 {t['previewUrl']}\n"
         text += "\n"
@@ -222,9 +222,9 @@ async def music_search(message: Message):
     text = f"🎶 Результаты по запросу '{query}':\n\n"
     for i, t in enumerate(tracks[:10], 1):
         text += f"{i}. 🎵 {t.get('trackName', 'Неизвестно')}\n"
-        text += f"   👤 {t.get('artistName', 'Неизвестно')}\n"
+        text += f"    {t.get('artistName', 'Неизвестно')}\n"
         if 'previewUrl' in t:
-            text += f"   🔗 {t['previewUrl']}\n"
+            text += f"    {t['previewUrl']}\n"
         text += "\n"
 
     await message.answer(text[:4000])
