--- a/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 1 (10.12)/Принимать текстовые запросы (название трека исполнитель).md
+++ b/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 1 (10.12)/Принимать текстовые запросы (название трека исполнитель).md
@@ -19,7 +19,7 @@ def search_music(query, limit=5):
         "term": query,
         "entity": "song",
         "limit": limit,
-        "country": "RU",  # Ищем в России
+        "country": "RU",
         "lang": "ru_ru"
     }
     return requests.get(url, params=params).json().get("results", [])
@@ -65,7 +65,6 @@ def get_top_tracks(limit=5):
         return tracks
     except Exception as e:
         print(f"Error getting top tracks: {e}")
-        # Fallback to international top
         url_us = f"https://itunes.apple.com/us/rss/topsongs/limit={limit}/json"
         results = requests.get(url_us).json().get("feed", {}).get("entry", [])
         tracks = []
@@ -79,13 +78,11 @@ def get_top_tracks(limit=5):
 
 
 def get_random_tracks(limit=5):
-    # Ищем по русским буквам для разнообразия
     search_terms = ["а", "и", "love", "pop", "rock", "д"]
     term = random.choice(search_terms)
     results = search_music(term, limit=50)
 
     if len(results) < limit:
-        # Если результатов мало, добавляем еще
         results += search_music(random.choice(["a", "the", "me"]), limit=30)
 
     return random.sample(results, min(limit, len(results)))
