--- a/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 2/Улучшение кода.md
+++ b/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 2/Улучшение кода.md
@@ -7,7 +7,7 @@ from aiogram import Bot, Dispatcher
 from aiogram.filters import Command
 from aiogram.types import Message
 
-# ================= НАСТРОЙКИ =================
+# --- НАСТРОЙКИ ---
 TOKEN = "8205786674:AAF0JYnQBU7F6-hXQ0eqjYoJZyxAFhlxKsA"
 SEARCH_LIMIT = 5
 
