--- a/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 2 (21.01)/Улучшение кода.md
+++ b/Индивидуальный проект/Телеграмм бот (поиск музыки)/Спринт 2 (21.01)/Улучшение кода.md
@@ -9,7 +9,7 @@ from aiogram.types import Message
 
 # --- НАСТРОЙКИ ---
 TOKEN = "8205786674:AAF0JYnQBU7F6-hXQ0eqjYoJZyxAFhlxKsA"
-SEARCH_LIMIT = 5
+	SEARCH_LIMIT = 5
 
 bot = Bot(token=TOKEN)
 dp = Dispatcher()
@@ -59,17 +59,28 @@ def get_random_tracks(limit=SEARCH_LIMIT):
 
 
 # --- Отправка ---
-async def send_preview(message: Message, track):
-    if "previewUrl" not in track:
+async def send_preview(message: Message, track: dict):
+    url = track.get("previewUrl")
+    if not url:
         return
 
-    await message.answer_audio(
-        audio=track["previewUrl"],
-        title=track.get("trackName"),
-        performer=track.get("artistName"),
-        caption="Вот твой трек!"
-    )
+    try:
+        session = await get_session()
+        async with session.get(url) as resp:
+            content = await resp.read()
 
+        # Рабочий способ с BytesIO + filename
+        audio_file = InputFile(BytesIO(content), filename="preview.m4a")
+
+        await message.answer_audio(
+            audio=audio_file,
+            title=track.get("trackName", "Unknown"),
+            performer=track.get("artistName", "Unknown"),
+            caption="🎵 Вот твой трек"
+        )
+
+    except Exception as e:
+        print("send_preview error:", e)
 
 # --- Команды бота ---
 @dp.message(Command("start"))
